# orion

./: .gitignore  OVERVIEW.md  PHASES.md  README.md  package.json  pyproject.toml  start.sh
app/: layout.tsx  page.tsx
archive/components/: ImageViewer.tsx  IncomingDataViewer.tsx  LLMReasoningTree.tsx  LLMResponseViewer.tsx  LogViewer.tsx  NetworkFlowVisualizer.tsx  PacketTimeline.tsx
components/: ContextDetailModal.tsx  DetectionList.tsx  LLMReasoningTree.tsx  NetworkFlowVisualizer.tsx  QueueItemDetailModal.tsx  QueueViewer.tsx  RawPacketViewer.tsx  VideoPlayer.tsx  VisionContextGraph.tsx
desktop/: README.md
desktop/Orion Server/: ContentView.swift  Info.plist  Orion_ServerApp.swift
desktop/Orion Server.xcodeproj/: project.pbxproj
lib/: websocket.ts
mobile/: Info.plist  LaunchScreen.storyboard  Orion-Info.plist  README.md  setup_models.sh
mobile/Configuration/: Build.xcconfig
mobile/FastVLM/: FastVLM.h  FastVLM.swift  MediaProcessingExtensions.swift
mobile/Orion/: ContentView.swift  FastVLMModel.swift  OrionApp.swift
mobile/Orion Live/: ContentView.swift  FastVLMModel.swift  Orion_LiveApp.swift
mobile/Orion Live.xcodeproj/: project.pbxproj
mobile/Orion.xcodeproj/: project.pbxproj
server/: README.md  __init__.py  benchmark.py  config.py  main.py  models.py  predict.py  pytest.ini  requirements.txt
server/services/: __init__.py  (+5 more)
signal/: README.md  index.ts  package.json  tsconfig.json
steering/: Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md
website/: .env.example  .gitignore  README.md  next.config.ts  package.json
(+204 files in other folders)
