[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-live"
version = "1.0.0"
description = "Real-time computer vision server with enhanced context understanding using MLX"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Orion Live Team", email = "team@orionlive.example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pillow==10.1.0",
    "numpy>=1.26.0",
    "mlx>=0.0.8",
    "requests>=2.31.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "python-json-logger==2.0.7",
    "rich==13.7.0",
    "python-dotenv==1.0.0"
]

[project.urls]
Documentation = "https://github.com/yourusername/orion-live#readme"
Source = "https://github.com/yourusername/orion-live"

[tool.hatch.build.targets.wheel]
packages = ["server"]